--- a/_posts/2017-06-01-CentOS7修改网卡名.md
+++ b/_posts/2017-06-01-CentOS7修改网卡名.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      CentOS7修改网卡名为eth0
-subtitle:   Mac终端显示输树状文件结构
+subtitle:   修改centos7的网卡名为eth0
 date:       2017-06-02
 author:     DY
 header-img: img/post-bg-universe
