添加了图片

--- a/_posts/2017-06-01-CentOS7修改网卡名.md
+++ b/_posts/2017-06-01-CentOS7修改网卡名.md
@@ -2,9 +2,9 @@
 layout:     post
 title:      CentOS7修改网卡名为eth0
 subtitle:   修改centos7的网卡名为eth0
-date:       2017-06-02
+date:       2017-06-01
 author:     DY
-header-img: img/post-bg-universe
+header-img: img/post-bg-hacker.jpg
 catalog: true
 tags:
     - network
