--- a/_posts/2017-06-02-Logstash篇.md
+++ b/_posts/2017-06-02-Logstash篇.md
@@ -175,7 +175,7 @@ output {
 ### 1.grok插件
 用于分析并结构化文本数据；目前 是logstash中将非结构化日志数据转化为结构化的可查询数据的不二之选
 
-#### 5.2.1.模式匹配演示
+### 5.2.1.模式匹配演示
 
 ```
 [root@node3 ~]# cat /etc/logstash/conf.d/grok.conf
@@ -209,7 +209,7 @@ Pipeline main started
       "duration" => "0.23"
 }
 ```
-#### 5.2.2.过滤apache日志
+### 5.2.2.过滤apache日志
 ```
 [root@node3 ~]# vim /etc/logstash/conf.d/grok_apache.conf
 
@@ -257,7 +257,7 @@ Pipeline main started
 }
 
 ```
-#### 5.2.3.过滤nginx日志
+### 5.2.3.过滤nginx日志
 ```
 # 在logstash自己的模式定义文件中加入以下行，要与patter匹配nginx日志
 [root@node3 ~]# vim /opt/logstash/vendor/bundle/jruby/1.9/gems/logstash-patterns-core-2.0.5/patterns/grok-patterns
@@ -302,7 +302,7 @@ output {
 }
 
 ```
-#### 5.2.3.过滤tomct日志
+### 5.2.3.过滤tomct日志
 
 
 ## 6.Output插件
