--- a/_posts/2017-06-21-CI持续集成系列(-)GitLab安装.md
+++ b/_posts/2017-06-21-CI持续集成系列(-)GitLab安装.md
@@ -32,12 +32,12 @@ CentOS Linux release 7.2.1511 (Core)
 # systemctl  enable postfix
 ```
 ## 安装gitlab-ce
-方法一:官网下载安装![官网地址](https://about.gitlab.com/downloads/#centos7)
+方法一:官网下载安装(https://about.gitlab.com/downloads/#centos7)
 ```
 # curl -sS https://packages.gitlab.com/install/repositories/gitlab/gitlab-ce/script.rpm.sh | sudo bash
 # yum install -y gitlab-ce
 ```
-方法二：采用国内的源下载![清华源](https://mirror.tuna.tsinghua.edu.cn/gitlab-ce/yum/el7/),推荐使用此方法。
+方法二：采用国内的源下载(https://mirror.tuna.tsinghua.edu.cn/gitlab-ce/yum/el7/),推荐使用此方法。
 ```
 # cat /etc/yum.repos.d/gitlab-ce.repoo
 [gitlab-ce]
