--- a/_posts/2017-06-21-CI持续集成系列(-)GitLab安装.md
+++ b/_posts/2017-06-21-CI持续集成系列(-)GitLab安装.md
@@ -69,13 +69,13 @@ gpgkey=https://packages.gitlab.com/gpg.key
 ![](http://upload-images.jianshu.io/upload_images/3149961-6e8f28aa60ba2d97.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 # 新增用户rex
 这里需要注意的是在创建完成以后，退出用rex用户的登录时，第一次需要更改密码。
-> 点击Admin area ==> 点击New User ==> 填写账户信息 ==> Create User
+点击Admin area ==> 点击New User ==> 填写账户信息 ==> Create User
 ![](http://upload-images.jianshu.io/upload_images/3149961-fa245bd36896e7ab.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-> 点击Edit，填写密码信息 ，点击 Save Changes
+点击Edit，填写密码信息 ，点击 Save Changes
 ![](http://upload-images.jianshu.io/upload_images/3149961-c9dc5ef93aeed159.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-> 退出就可以使用rex用户进行登录了，注意第一次使用rex登录需要修改密码
+退出就可以使用rex用户进行登录了，注意第一次使用rex登录需要修改密码
 ![](http://upload-images.jianshu.io/upload_images/3149961-96041de0c500abc5.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 ![](http://upload-images.jianshu.io/upload_images/3149961-077260ebc245fe38.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
