--- a/_posts/2017-06-26-Zabbix3.0安装(一).md
+++ b/_posts/2017-06-26-Zabbix3.0安装(一).md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Zabbix3.0安装部署
+title:      Zabbix3.0安装部署(一)
 subtitle:   在CentOS7.2上使用zabbix官方源安装zabbix
 date:       2017-06-26
 author:     DY
