--- a/_posts/2017-07-02-test.md
+++ b/_posts/2017-07-02-test.md
@@ -36,3 +36,4 @@ tags:
 用`> 文件名.格式` 的形式导出
 
 	$ tree -L 1 > tree.md
+![](file:///F:/%E4%B8%BA%E7%9F%A5%E7%AC%94%E8%AE%B0%E7%9A%84%E7%AC%94%E8%AE%B0/temp/ff23c24d-b593-4dbe-a1c5-9536acbbb7b1/128/index_files/5482403e-c44b-4fed-92d9-918cee2c12cc.png)
